# BahriaLMS

./: CMakeLists.txt  README.md  bahria.qss  constants.h  lms_system.cpp  lms_system.h  main.cpp  mainwindow.cpp  mainwindow.h  models.cpp  models.h  resources.qrc
