
cmake_minimum_required(VERSION 3.16)
project(BahriaLMS LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTORCC ON)

find_package(Qt6 REQUIRED COMPONENTS Widgets)
qt_standard_project_setup()

qt_add_executable(BahriaLMS
    main.cpp
    constants.h
    models.h
    models.cpp
    lms_system.h
    lms_system.cpp
    mainwindow.h
    mainwindow.cpp
    resources.qrc
)

target_link_libraries(BahriaLMS PRIVATE Qt6::Widgets)
